# balce2025

./: .gitignore  FUNCTIONALITY.md  README-zh-CN.md  README.md  balanced_equations.txt  chem_names_zh.py  config.json  job.txt  log.txt  pyproject.toml  requirements.txt  start_balce.bat  test_chem_names.py  test_unicode_display.py
.devcontainer/: devcontainer.json
balce/: __init__.py  __main__.py  app.py  balance.py  complete.py  contexts.py  core.py  elesdat.py  memo.py  parser.py  predict.py  test.py  utils.py
balce.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
balceapp/: config.py  config.py.example  index.py  utils.py
